--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.4.2",
+    "@heroicons/vue": "^2.0.15",
+    "@vee-validate/i18n": "^4.7.4",
+    "@vee-validate/rules": "^4.7.4",
     "axios": "^1.3.2",
+    "flowbite": "^1.6.3",
+    "mitt": "^3.0.0",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/cli-plugin-router": "^5.0.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "sass": "^1.58.0",
